--- a/new-app/src/components/Nav/styles.css
+++ b/new-app/src/components/Nav/styles.css
@@ -1,3 +1,5 @@
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin-ext');
+
 .topImage {
     width: 400px; height: 162px;
 }
