--- a/new-app/src/components/Shop/style.css
+++ b/new-app/src/components/Shop/style.css
@@ -1,3 +1,4 @@
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin-ext');
 
 img {
     width: 300px;
@@ -16,4 +17,67 @@ img {
 
 ul.list {
     list-style-position: inside;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-family: 'Julius Sans One', sans-serif;
+    font-size: 15px;
+    background-color: rgba(144, 195, 34, 0.13);
+    border-left: 6px solid #73AD21;
+    border-right: 6px solid #73AD21;
+
 }
+ul.list li{
+    border-style: solid;
+    border-width: 5px;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+ul.list :visited {
+    color: #555555;
+}
+
+ul.list :hover {
+    color: #73AD21;
+}
+
+ol li {
+    text-align: left;
+}
+
+p {
+    text-align: left;
+}
+
+p.price {
+    text-align: center;
+}
+
+ul.link {
+    list-style-position: inside;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-family: 'Julius Sans One', sans-serif;
+    font-size: 15px;
+    background-color: rgba(144, 195, 34, 0.13);
+    border-left: 6px solid #73AD21;
+    border-right: 6px solid #73AD21;
+    color: red;
+
+}
+ul.link li{
+    border-style: solid;
+    border-width: 5px;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+}
+
+
+
+
