--- a/src/main/resources/templates/recipes/cookies.html
+++ b/src/main/resources/templates/recipes/cookies.html
@@ -2,26 +2,22 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Pizza americana</title>
+	<title>Cookies</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="css/nivo-slider.css" type="text/css" />
-	<link rel="stylesheet" href="css/owl.carousel.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/responsive.css">
+	<!-- Css -->
+	<link rel="stylesheet" type="text/css" href="https://clothobserve.com/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/css/responsive.css">
 
-	<script src="js/jquery.min.js" type="text/javascript"></script>
-	<script src="js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="js/jquery.nivo.slider.js" type="text/javascript"></script>
-	<script src="js/owl.carousel.min.js" type="text/javascript"></script>
-	<script src="js/jquery.nicescroll.js"></script>
-	<script src="js/jquery.scrollUp.min.js"></script>
-	<script src="js/main.js" type="text/javascript"></script>
+	<!-- jS -->
+	<script type="text/javascript" src="https://clothobserve.com/js/vendor/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="https://clothobserve.com/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/js/main.js"></script>
 
 
 </head>
@@ -46,7 +42,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<a href="#">
-						<img src="images/logo.jpg" alt="logo">
+						<img src="https://clothobserve.com/easycook/logo.jpg" alt="logo">
 					</a>
 				</div>
 			</div>
@@ -72,17 +68,17 @@
 		<div class="container">
 			<div class="row">
 				<div class="product">
-				<img src="images/americana.jpg">
+				<img src="https://clothobserve.com/easycook/cookies.jpg">
 				</div>
 				<div class="col-md-12">
 					<div class="product-des">
 						<div class="product">
-							<h3>Pizza americana</h3>
-							<p class="price">€5.10</p>
+							<h3>Cookies</h3>
+							<p class="price">€5.50</p>
 							<div class="product-heading">
 								<h3>INGREDIENTS</h3>
 							</div>
-							<h5 class="price">pepperoni, mushrooms, mozzarella, bread flour, olive oil, tomato sauce</h5>
+							<h5 class="price">granulated sugar, brown sugar, butter, vanilla, egg, flour, baking soda, salt, coarsely chopped nuts, chocolate chips</h5>
 						</div>
 					</div>
 				</div>
@@ -90,11 +86,10 @@
 					<h3>RECIPE</h3>
 				</div>
 				<div class="product-dest" >
-					<h6>1.For crusts: Combine 2 cups of flour with the dry yeast, sugar and salt. Add the water and oil and mix until well blended (about 1 minute). Gradually add enough remaining flour slowly, until a soft, sticky dough ball is formed.</h6>
-					<h6>2.Knead for about 4 minutes, on a floured surface, until dough is smooth and elastic. Add more flour, if needed. (If using RapidRise(R) Yeast, let dough rest, covered, for 10 minutes.)</h6>
-					<h6>3.Divide dough in half. Pat each half (with floured hands) into a 12-inch greased pizza pan OR roll dough to fit pans.</h6>
-					<h6>4.For pizzas: Preheat oven to 425 degrees F. Top crusts with sauce, pepperoni and cheese.</h6>
-					<h6>5.Bake for 18 to 20 minutes until crusts are browned and cheese is bubbly. For best results, rotate pizza pans between top and bottom oven racks halfway through baking.</h6>
+					<h6>1.Heat oven to 375єF.</h6>
+					<h6>2.Mix sugars, butter, vanilla and egg in large bowl. Stir in flour, baking soda and salt (dough will be stiff). Stir in nuts and chocolate chips.</h6>
+					<h6>3.Drop dough by rounded tablespoonfuls about 2 inches apart onto ungreased cookie sheet.</h6>
+					<h6>4.Bake 8 to 10 minutes or until light brown (centers will be soft). Cool slightly; remove from cookie sheet. Cool on wire rack.</h6>
 				</div>
 				<div class="product-des">
 					<a class="view-link" href="order.html"><i class="fa fa-plus-circle"></i>Proceed to checkout</a>
@@ -109,7 +104,7 @@
 				<div class="col-md-4">
 					<div class="block clearfix">
 						<a href="#">
-							<img src="images/footer-logo.jpg" alt="">
+							<img src="https://clothobserve.com/easycook/footer-logo.jpg" alt="">
 						</a>
 						<p>
 						We make cooking easy, fast and affordable for everybody! Experience the taste of fresh, home-made food, using modern recipes from the best restaurants in the world. We will provide you with all of the ingredients you need, in the right quantities, on your schedule.	
@@ -129,16 +124,16 @@
 						<h4>COMING SOON</h4>
 						<div class="media">
 						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/Prawn_and_avocado_salad.jpg" alt="...">
+						    	<img class="media-object" src="https://clothobserve.com/easycook/Prawn_and_avocado_salad.jpg" alt="...">
 						  	</a>
 						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/chockolatecake.jpg" alt="...">
+						    	<img class="media-object" src="https://clothobserve.com/easycook/chockolatecake.jpg" alt="...">
 						  	</a>
 						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/lapsha.jpg" alt="...">
+						    	<img class="media-object" src="https://clothobserve.com/easycook/lapsha.jpg" alt="...">
 						  	</a>
 						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/indian-food.jpg" alt="...">
+						    	<img class="media-object" src="https://clothobserve.com/easycook/indian-food.jpg" alt="...">
 						  	</a>	
 						</div>
 					</div>
