--- a/src/main/resources/templates/recipes/mackerel.html
+++ b/src/main/resources/templates/recipes/mackerel.html
@@ -2,26 +2,22 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Salmon</title>
+	<title>Mackerel</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="css/nivo-slider.css" type="text/css" />
-	<link rel="stylesheet" href="css/owl.carousel.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/responsive.css">
+	<!-- Css -->
+	<link rel="stylesheet" type="text/css" href="https://clothobserve.com/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/css/responsive.css">
 
-	<script src="js/jquery.min.js" type="text/javascript"></script>
-	<script src="js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="js/jquery.nivo.slider.js" type="text/javascript"></script>
-	<script src="js/owl.carousel.min.js" type="text/javascript"></script>
-	<script src="js/jquery.nicescroll.js"></script>
-	<script src="js/jquery.scrollUp.min.js"></script>
-	<script src="js/main.js" type="text/javascript"></script>
+	<!-- jS -->
+	<script type="text/javascript" src="https://clothobserve.com/js/vendor/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="https://clothobserve.com/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/js/main.js"></script>
 
 
 </head>
@@ -46,7 +42,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<a href="#">
-						<img src="images/logo.jpg" alt="logo">
+						<img src="https://clothobserve.com/easycook/logo.jpg" alt="logo">
 					</a>
 				</div>
 			</div>
@@ -72,17 +68,17 @@
 		<div class="container">
 			<div class="row">
 				<div class="product">
-				<img src="images/salmon.jpg">
+				<img src="https://clothobserve.com/easycook/mackerel.jpg">
 				</div>
 				<div class="col-md-12">
 					<div class="product-des">
 						<div class="product">
-							<h3>Salmon</h3>
-							<p class="price">€6.99</p>
+							<h3>Mackerel</h3>
+							<p class="price">€7.80</p>
 							<div class="product-heading">
 								<h3>INGREDIENTS</h3>
 							</div>
-							<h5 class="price">red onions, red pepper, yellow pepper, courgette, garlic bulb, tomatoes, olive oil, cherry tomatoes on the vine, sustainable salmon fillets, lemon juice, basil</h5>
+							<h5 class="price">large pasta shells, broccoli, oil, red onions, garlic, tomato purie, red wine, chopped tomatoes, basil, peppered smoked mackerel fillets, light crime fraоche, cheddar</h5>
 						</div>
 					</div>
 				</div>
@@ -90,8 +86,9 @@
 					<h3>RECIPE</h3>
 				</div>
 				<div class="product-dest" >
-					<h6>1.Preheat the oven to 200°C/fan180°C/gas 6. Tumble the onions, peppers, courgette, garlic and medium tomatoes into a shallow roasting tray. Pour over 3 tbsp olive oil, season with sea salt and ground black pepper, then gently toss to coat. Roast for 20 minutes.</h6>
-					<h6>2.2.Add the vine tomatoes to the tray and lay the salmon fillets on top. Season, then drizzle with a little more oil and a squeeze of lemon juice. Return to the oven for 10-12 minutes until the salmon is just cooked through and the vegetables are tender. Scatter with fresh basil leaves to serve.</h6>
+					<h6>1.Heat the oven to 200°C/180°C fan/gas 6. Bring a large pan of water to the boil and cook the pasta shells for 2 minutes less than the pack instructions. Add the head of broccoli, sliced into florets, for the last 2 minutes of the cooking time, then drain and set aside.</h6>
+					<h6>2.Meanwhile, in a large sautй pan, heat a glug of oil and fry the red onions for 5 minutes. Add the garlic and tomato purйe, fry for a few minutes, then add the red wine. Bubble for 2 minutes, then add the chopped tomatoes and basil. Cook for 10 minutes, then season.</h6>
+					<h6>3.Remove the skin from a the mackerel fillets and break up into bite-size pieces. Stir into the pan with the remaining basil and light crиme fraоche. Spoon into a 2 litre baking dish (or keep in the pan if it’s ovenproof) and top with grated mature cheddar. Cook in the oven for 20-25 minutes until golden and piping hot throughout.</h6>
 				</div>
 				<div class="product-des">
 					<a class="view-link" href="order.html"><i class="fa fa-plus-circle"></i>Proceed to checkout</a>
@@ -106,7 +103,7 @@
 				<div class="col-md-4">
 					<div class="block clearfix">
 						<a href="#">
-							<img src="images/footer-logo.jpg" alt="">
+							<img src="https://clothobserve.com/easycook/footer-logo.jpg" alt="">
 						</a>
 						<p>
 						We make cooking easy, fast and affordable for everybody! Experience the taste of fresh, home-made food, using modern recipes from the best restaurants in the world. We will provide you with all of the ingredients you need, in the right quantities, on your schedule.	
@@ -126,16 +123,16 @@
 						<h4>COMING SOON</h4>
 						<div class="media">
 						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/Prawn_and_avocado_salad.jpg" alt="...">
+						    	<img class="media-object" src="https://clothobserve.com/easycook/Prawn_and_avocado_salad.jpg" alt="...">
 						  	</a>
 						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/chockolatecake.jpg" alt="...">
+						    	<img class="media-object" src="https://clothobserve.com/easycook/chockolatecake.jpg" alt="...">
 						  	</a>
 						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/lapsha.jpg" alt="...">
+						    	<img class="media-object" src="https://clothobserve.com/easycook/lapsha.jpg" alt="...">
 						  	</a>
 						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/indian-food.jpg" alt="...">
+						    	<img class="media-object" src="https://clothobserve.com/easycook/indian-food.jpg" alt="...">
 						  	</a>	
 						</div>
 					</div>
