--- a/src/main/resources/templates/recipes/meatloaf.html
+++ b/src/main/resources/templates/recipes/meatloaf.html
@@ -2,26 +2,22 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Mackerel</title>
+	<title>Meatloaf</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="css/nivo-slider.css" type="text/css" />
-	<link rel="stylesheet" href="css/owl.carousel.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/responsive.css">
+	<!-- Css -->
+	<link rel="stylesheet" type="text/css" href="https://clothobserve.com/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/css/responsive.css">
 
-	<script src="js/jquery.min.js" type="text/javascript"></script>
-	<script src="js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="js/jquery.nivo.slider.js" type="text/javascript"></script>
-	<script src="js/owl.carousel.min.js" type="text/javascript"></script>
-	<script src="js/jquery.nicescroll.js"></script>
-	<script src="js/jquery.scrollUp.min.js"></script>
-	<script src="js/main.js" type="text/javascript"></script>
+	<!-- jS -->
+	<script type="text/javascript" src="https://clothobserve.com/js/vendor/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="https://clothobserve.com/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/js/main.js"></script>
 
 
 </head>
@@ -46,7 +42,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<a href="#">
-						<img src="images/logo.jpg" alt="logo">
+						<img src="https://clothobserve.com/easycook/logo.jpg" alt="logo">
 					</a>
 				</div>
 			</div>
@@ -72,17 +68,17 @@
 		<div class="container">
 			<div class="row">
 				<div class="product">
-				<img src="images/mackerel.jpg">
+				<img src="https://clothobserve.com/easycook/meatloaf.jpg">
 				</div>
 				<div class="col-md-12">
 					<div class="product-des">
 						<div class="product">
-							<h3>Mackerel</h3>
-							<p class="price">€7.80</p>
+							<h3>Meatloaf</h3>
+							<p class="price">€9.50</p>
 							<div class="product-heading">
 								<h3>INGREDIENTS</h3>
 							</div>
-							<h5 class="price">large pasta shells, broccoli, oil, red onions, garlic, tomato purie, red wine, chopped tomatoes, basil, peppered smoked mackerel fillets, light crime fraоche, cheddar</h5>
+							<h5 class="price">bacon lardons, white breadcrumbs, free-range egg, milk, dijon mustard, dried thyme, basil, ground nutmeg, onion, celery, parsley, finely , minced beef, minced pork</h5>
 						</div>
 					</div>
 				</div>
@@ -90,9 +86,11 @@
 					<h3>RECIPE</h3>
 				</div>
 				<div class="product-dest" >
-					<h6>1.Heat the oven to 200°C/180°C fan/gas 6. Bring a large pan of water to the boil and cook the pasta shells for 2 minutes less than the pack instructions. Add the head of broccoli, sliced into florets, for the last 2 minutes of the cooking time, then drain and set aside.</h6>
-					<h6>2.Meanwhile, in a large sautй pan, heat a glug of oil and fry the red onions for 5 minutes. Add the garlic and tomato purйe, fry for a few minutes, then add the red wine. Bubble for 2 minutes, then add the chopped tomatoes and basil. Cook for 10 minutes, then season.</h6>
-					<h6>3.Remove the skin from a the mackerel fillets and break up into bite-size pieces. Stir into the pan with the remaining basil and light crиme fraоche. Spoon into a 2 litre baking dish (or keep in the pan if it’s ovenproof) and top with grated mature cheddar. Cook in the oven for 20-25 minutes until golden and piping hot throughout.</h6>
+					<h6>1.Cook the lardons in a dry frying pan over a medium heat until well browned and crispy. Remove from the pan with a slotted spoon, drain on kitchen paper and set aside. Put the breadcrumbs in a large bowl. Beat the egg and milk together in a jug, then pour over the breadcrumbs. Leave to stand for 10 minutes.</h6>
+					<h6>2.Stir in the mustard, dried herbs, nutmeg, onion, celery, parsley and cooked lardons. Add the minced meats, season and mix well. Pack the mixture into a 2kg loaf tin. Cover the whole tin with foil and chill for at least 4 hours or overnight to firm up.</h6>
+					<h6>3.Preheat the oven to 180°C/fan160°C/gas 4. Take the loaf tin out of the fridge, uncover and press down firmly. Re-cover and cook in the oven for 45-50 minutes.</h6>
+					<h6>4.Meanwhile, make the sauce. Fry the onions, stirring, for about 5 minutes or until soft and golden. Sprinkle over the sugar and cook for 5 minutes, stirring constantly. Add the garlic and tomato purйe and cook for a further 5 minutes. Add the stock and ale, bring to the boil and bubble for about 6-7 minutes to reduce by a third. Finally, mix in the cornflour paste and simmer for 1 minute, stirring until thickened. Season to taste, then set aside and keep warm.</h6>
+					<h6>5.Take the meatloaf out of the oven and leave to stand for 10 minutes before turning out of the tin and slicing. Serve with a good dollop of mash and some steamed greens, and the sauce poured over the top.</h6>
 				</div>
 				<div class="product-des">
 					<a class="view-link" href="order.html"><i class="fa fa-plus-circle"></i>Proceed to checkout</a>
@@ -107,7 +105,7 @@
 				<div class="col-md-4">
 					<div class="block clearfix">
 						<a href="#">
-							<img src="images/footer-logo.jpg" alt="">
+							<img src="https://clothobserve.com/easycook/footer-logo.jpg" alt="">
 						</a>
 						<p>
 						We make cooking easy, fast and affordable for everybody! Experience the taste of fresh, home-made food, using modern recipes from the best restaurants in the world. We will provide you with all of the ingredients you need, in the right quantities, on your schedule.	
@@ -127,16 +125,16 @@
 						<h4>COMING SOON</h4>
 						<div class="media">
 						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/Prawn_and_avocado_salad.jpg" alt="...">
+						    	<img class="media-object" src="https://clothobserve.com/easycook/Prawn_and_avocado_salad.jpg" alt="...">
 						  	</a>
 						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/chockolatecake.jpg" alt="...">
+						    	<img class="media-object" src="https://clothobserve.com/easycook/chockolatecake.jpg" alt="...">
 						  	</a>
 						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/lapsha.jpg" alt="...">
+						    	<img class="media-object" src="https://clothobserve.com/easycook/lapsha.jpg" alt="...">
 						  	</a>
 						  	<a class="pull-left" href="#">
-						    	<img class="media-object" src="images/indian-food.jpg" alt="...">
+						    	<img class="media-object" src="https://clothobserve.com/easycook/indian-food.jpg" alt="...">
 						  	</a>	
 						</div>
 					</div>
