--- a/src/main/resources/templates/recipes/americana.html
+++ b/src/main/resources/templates/recipes/americana.html
@@ -53,12 +53,12 @@
 	<nav class="navbar navbar-default">
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav nav-main">
-		        	<li><a href="index.html">HOME</a></li>
-					<li><a href="index.html">SALADS</a></li>
-					<li><a href="index.html">MEAT</a></li>
-					<li><a href="index.html">FISH</a></li>
-					<li><a href="index.html">PIZZA</a></li>
-					<li><a href="index.html">DESSERTS</a></li>
+		        	<li><a href="/">HOME</a></li>
+					<li><a href="/">SALADS</a></li>
+					<li><a href="/">MEAT</a></li>
+					<li><a href="/">FISH</a></li>
+					<li><a href="/">PIZZA</a></li>
+					<li><a href="/">DESSERTS</a></li>
 		        </ul>
 		    </div>
 		
@@ -93,7 +93,7 @@
 					<h6>5.Bake for 18 to 20 minutes until crusts are browned and cheese is bubbly. For best results, rotate pizza pans between top and bottom oven racks halfway through baking.</h6>
 				</div>
 				<div class="product-des">
-					<a class="view-link" href="order.html"><i class="fa fa-plus-circle"></i>Proceed to checkout</a>
+					<a class="view-link" href="/order"><i class="fa fa-plus-circle"></i>Proceed to checkout</a>
 				</div>
 			</div>
 		</div>
